ansi2/src/snapshots/ansi2__test__empty_link.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Unknown(
            27,
        ),
        Char(
            ']',
        ),
        Char(
            '8',
        ),
        Char(
            ';',
        ),
        Char(
            ';',
        ),
        Unknown(
            27,
        ),
        Char(
            '\\',
        ),
    ],
)
