ansi2/src/snapshots/ansi2__test__fastfetch-canvas.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [],
    ],
    w: 48,
    h: 1,
}
