ansi2/src/snapshots/ansi2__test__fastfetch.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        CursorHorizontalAbsolute(
            1,
        ),
        CursorUp(
            19,
        ),
        CursorForward(
            47,
        ),
    ],
)
