ansi2/src/snapshots/ansi2__test__link-3.snap
---
source: ansi2/src/lib.rs
expression: canvas.minify()
---
[
    [
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: "]8;;file:///Users/xxx/src/new-nu-parser/Cargo.toml\\Cargo.toml]8;;",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
        },
    ],
]
