ansi2/src/snapshots/ansi2__test__link.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Unknown(
            27,
        ),
        Char(
            ']',
        ),
        Char(
            '8',
        ),
        Char(
            ';',
        ),
        Char(
            ';',
        ),
        Char(
            'f',
        ),
        Char(
            'i',
        ),
        Char(
            'l',
        ),
        Char(
            'e',
        ),
        Char(
            ':',
        ),
        Char(
            '/',
        ),
        Char(
            '/',
        ),
        Char(
            '/',
        ),
        Char(
            'U',
        ),
        Char(
            's',
        ),
        Char(
            'e',
        ),
        Char(
            'r',
        ),
        Char(
            's',
        ),
        Char(
            '/',
        ),
        Char(
            'x',
        ),
        Char(
            'x',
        ),
        Char(
            'x',
        ),
        Char(
            '/',
        ),
        Char(
            's',
        ),
        Char(
            'r',
        ),
        Char(
            'c',
        ),
        Char(
            '/',
        ),
        Char(
            'n',
        ),
        Char(
            'e',
        ),
        Char(
            'w',
        ),
        Char(
            '-',
        ),
        Char(
            'n',
        ),
        Char(
            'u',
        ),
        Char(
            '-',
        ),
        Char(
            'p',
        ),
        Char(
            'a',
        ),
        Char(
            'r',
        ),
        Char(
            's',
        ),
        Char(
            'e',
        ),
        Char(
            'r',
        ),
        Char(
            '/',
        ),
        Char(
            'C',
        ),
        Char(
            'a',
        ),
        Char(
            'r',
        ),
        Char(
            'g',
        ),
        Char(
            'o',
        ),
        Char(
            '.',
        ),
        Char(
            't',
        ),
        Char(
            'o',
        ),
        Char(
            'm',
        ),
        Char(
            'l',
        ),
        Unknown(
            27,
        ),
        Char(
            '\\',
        ),
        Char(
            'C',
        ),
        Char(
            'a',
        ),
        Char(
            'r',
        ),
        Char(
            'g',
        ),
        Char(
            'o',
        ),
        Char(
            '.',
        ),
        Char(
            't',
        ),
        Char(
            'o',
        ),
        Char(
            'm',
        ),
        Char(
            'l',
        ),
        Unknown(
            27,
        ),
        Char(
            ']',
        ),
        Char(
            '8',
        ),
        Char(
            ';',
        ),
        Char(
            ';',
        ),
        Unknown(
            27,
        ),
    ],
)
