ansi2/src/snapshots/ansi2__test__link_hide-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "h",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "t",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "t",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "p",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: ":",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "/",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "/",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "e",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "x",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "m",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "p",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "l",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "e",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: ".",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "c",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "o",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "m",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "/",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "h",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "o",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "w",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "_",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "b",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "o",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "u",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "t",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "_",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "m",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "e",
                dim: false,
                italic: false,
                underline: false,
                hide: true,
            },
        ],
    ],
    w: 32,
    h: 1,
}
