ansi2/src/snapshots/ansi2__test__link_hide.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        CursorHide,
        Char(
            'h',
        ),
        Char(
            't',
        ),
        Char(
            't',
        ),
        Char(
            'p',
        ),
        Char(
            ':',
        ),
        Char(
            '/',
        ),
        Char(
            '/',
        ),
        Char(
            'e',
        ),
        Char(
            'x',
        ),
        Char(
            'a',
        ),
        Char(
            'm',
        ),
        Char(
            'p',
        ),
        Char(
            'l',
        ),
        Char(
            'e',
        ),
        Char(
            '.',
        ),
        Char(
            'c',
        ),
        Char(
            'o',
        ),
        Char(
            'm',
        ),
        Char(
            '/',
        ),
        Char(
            'h',
        ),
        Char(
            'o',
        ),
        Char(
            'w',
        ),
        Char(
            '_',
        ),
        Char(
            'a',
        ),
        Char(
            'b',
        ),
        Char(
            'o',
        ),
        Char(
            'u',
        ),
        Char(
            't',
        ),
        Char(
            '_',
        ),
        Char(
            'm',
        ),
        Char(
            'e',
        ),
        ColorReset,
    ],
)
