ansi2/src/snapshots/ansi2__test__link_id-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 't',
                dim: false,
                italic: false,
                underline: true,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 'w',
                dim: false,
                italic: false,
                underline: true,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 'i',
                dim: false,
                italic: false,
                underline: true,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 'c',
                dim: false,
                italic: false,
                underline: true,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 'e',
                dim: false,
                italic: false,
                underline: true,
                hide: false,
            },
        ],
    ],
    w: 6,
    h: 1,
}
